--- a/css/demo.css
+++ b/css/demo.css
@@ -106,16 +106,6 @@ img.mobileLogo p {
     height: auto;
 }
 
-.myContainer {
-    display: flex;
-    background-color: brown;
-    width: 100%;
-    justify-content: flex-start;
-    height: auto;
-    background-size: cover;
-    padding-top: 60px;
-}
-
 .banner_inner {
     position: absolute;
     left: 75%;
@@ -217,121 +207,127 @@ h1.animate {
         opacity: 1
     }
 }
+
 /* content json */
-        .area-wrapper {
-            display: grid;
-            grid-template-columns: auto auto auto auto auto auto ;
-            justify-content: center;
-        }
-
-        .overskrift {}
-
-        .indhold {}
-
-        .kalk {
-            display: grid;
-            grid-template-columns: repeat(1, 1fr);
-        }
-
-        .indhold img {
-            width: 25%;
-        }
-
-        .indhold figure {
-            margin: 0;
-        }
-
-
-        .overskrift {
-            text-align: center;
-            display: none;
-        }
-
-        .billede {
-            max-width: 300px;
-        }
-        .kalk h2 {
-            padding-left: 1em;
-        }
-        .kalk p{
-            padding-left: 1em;
-        }
-       .kalk img {
-            width: 300px;
-            top: 1em;
-            margin-top: 1em;
-        }
-
-
-        main {
-            max-width: 100%;
-            margin-top: 0px;
-        }
-        @media (min-width: 800px) {
-            .retter {
-                grid-template-columns: repeat(3, 1fr);
-                grid-gap: 2px;
-            }
-        }
-        /* Nav content json */
-
-        .nav ul {
-            list-style: none;
-            background-color: #42c1c0;
-            text-align: center;
-            padding: 0;
-            margin: 0;
-        }
-
-        .nav li {
-            font-size: 1.2em;
-            line-height: 60px;
-            height: 60px;
-            border-bottom: 1px solid #b3aa87;
-        }
-
-        .nav a {
-            text-decoration: none;
-            color: #f27020;
-            display: block;
-            transition: .3s background-color;
-        }
-
-        .nav a:hover {
-            background-color: #00b5b2;
-        }
-
-        .nav a.active {
-            background-color: #fff;
-            color: #796d65;
-            cursor: default;
-        }
-
-
-        @media screen and (min-width: 600px) {
-            .nav li {
-                width: 120px;
-                border-bottom: none;
-                height: 40px;
-                line-height: 40px;
-                font-size: 1em;
-            }
-
-            .nav li {
-                display: inline-block;
-                margin-right: -4px;
-            }
-        }
-        /* grid */
-        /* grid indhold */
-.grid-container {
+.area-wrapper {
     display: grid;
+    grid-template-columns: auto auto auto auto auto auto;
+    justify-content: center;
+}
+
+.indhold {}
+
+.kalk {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+}
+
+.indhold img {
+    max-width: 100%;
+    height: 300px;
+}
+
+.indhold figure {
+    margin: 0;
+}
+
+.overskrift {
+    text-align: center;
+    display: none;
+}
+
+.kalk h2 {
+    padding-left: 1em;
+}
+
+.kalk p {
+    padding-left: 1em;
+}
+
+.kalk img {
+    width: 300px;
+    top: 1em;
+    margin-top: 1em;
+}
+
+
+main {
+    max-width: 100%;
+    margin-top: 0px;
+}
+
+@media (min-width: 800px) {
+    .retter {
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 2px;
+    }
+}
+
+/* Nav content json */
+.navi {
+    margin-top: -30px;
+}
+
+.navi ul {
+    list-style: none;
+    background-color: #42c1c0;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+}
+
+.navi li {
+    font-size: 0.8em;
+    line-height: 60px;
+    height: 60px;
+    border-bottom: 1px solid #b3aa87;
+}
+
+.navi a {
+    text-decoration: none;
+    color: #f27020;
+    display: block;
+    transition: .3s background-color;
+}
+
+.navi a:hover {
+    background-color: #00b5b2;
+}
+
+.navi a.active {
+    background-color: #fff;
+    color: #796d65;
+    cursor: default;
+}
+
+
+@media screen and (min-width: 600px) {
+    .navi li {
+        width: 120px;
+        border-bottom: none;
+        height: 40px;
+        line-height: 40px;
+        font-size: 0.7em;
+    }
+
+    .navi li {
+        display: inline-block;
+        margin-right: -4px;
+    }
+}
+
+/* grid */
+/* grid indhold */
+.grid-container {
+    display: inline-grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
-    article.kalk{
-            display: grid;
+
+article.kalk {
+    display: inline-grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-        }
+}
+
 .grid-item:nth-child(1) {
     grid-column: 1 / 7;
     grid-row: 1 / 2;
@@ -341,10 +337,12 @@ h1.animate {
     grid-column: 1/ 4;
     grid-row: 2 / 3;
 }
+
 .grid-item:nth-child(3) {
     grid-column: 1/ 4;
     grid-row: 3 / 4;
 }
+
 .grid-item:nth-child(4) {
     grid-column: 4/ 6;
     grid-row: 2 / 4;
@@ -359,14 +357,13 @@ h1.animate {
     grid-column: 3 /6;
     grid-row: 4 / 5;
 }
+
 .grid-item:nth-child(7) {
     grid-column: 3 /6;
     grid-row: 5 / 6;
 }
 
 .grid-item:nth-child(8) {
-    background: pink;
-
     grid-column: 6 / 7;
     grid-row: 2 / 6;
 }
@@ -374,6 +371,8 @@ h1.animate {
 /* grid højde */
 .grid-item {
     padding: 30px;
+    font-size: 16px;
+    text-align: left;
 }
 
 /* footer */
@@ -385,10 +384,12 @@ footer {
     text-align: center;
     font-size: .75rem;
 }
+
 footer.page-footer {
     bottom: 0;
     color: #fff;
 }
+
 .conta {
     width: 100%;
     padding-right: 15px;
@@ -396,9 +397,11 @@ footer.page-footer {
     margin-right: auto;
     margin-left: auto;
 }
-.page-footer{
+
+.page-footer {
     background-color: #ec7f44 !important;
 }
+
 .row {
     display: -ms-flexbox;
     display: flex;
@@ -407,23 +410,30 @@ footer.page-footer {
     margin-right: -15px;
     margin-left: -15px;
 }
-.pb-5, .py-5 {
+
+.pb-5,
+.py-5 {
     padding-bottom: 3rem !important;
     padding-top: 3rem !important;
 }
+
 .col-md-12 {
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
 }
+
 .fa-lg {
     font-size: 1.33333em;
     line-height: .75em;
     vertical-align: -.0667em;
 }
-.mr-md-5, .mx-md-5 {
+
+.mr-md-5,
+.mx-md-5 {
     margin-right: 3rem !important;
 }
+
 .flex-center {
     display: -webkit-box;
     display: -webkit-flex;
@@ -439,16 +449,20 @@ footer.page-footer {
     align-items: center;
     height: 100%;
 }
+
 /* copyright */
 footer.page-footer .footer-copyright {
     overflow: hidden;
-    background-color: rgba(0,0,0,.2);
-    color: rgba(255,255,255,.6);
+    background-color: rgba(0, 0, 0, .2);
+    color: rgba(255, 255, 255, .6);
 }
+
 .text-center {
     text-align: center !important;
 }
-.pb-3, .py-3 {
+
+.pb-3,
+.py-3 {
     padding-bottom: 1rem !important;
     padding-top: 1rem !important;
 }
@@ -464,13 +478,6 @@ footer.page-footer .footer-copyright {
 }
 
 @media screen and (min-width: 810px) {
-     img.mobileLogo {
-        display: none !important;
-    }
-    p.mobileTekst {
-        display: none !important;
-
-    }
     #banner-splash {
         display: block;
     }
@@ -481,10 +488,11 @@ footer.page-footer .footer-copyright {
 }
 
 @media screen and (max-width: 809px) {
-    main{
+    main {
         margin-top: 60px;
     }
-        #banner-splash {
+
+    #banner-splash {
         display: none;
     }
 
@@ -495,7 +503,8 @@ footer.page-footer .footer-copyright {
     a#mobileSplash {
         display: block;
     }
-          /* header items */
+
+    /* header items */
     img.mySlides {
         max-height: 40vh;
     }
@@ -517,25 +526,27 @@ footer.page-footer .footer-copyright {
         -o-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
     }
-  #mobileSplash {
-    padding-top: 60px;
-    height: 740px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center 60px;
-    width: 100%;
-}
-  #splash {
-    background-image: url('../slider/fossiler.jpg');
-    padding-top: 60px;
-    height: 740px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center 60px;
-    width: 100%;
-}
+
+    #mobileSplash {
+        padding-top: 60px;
+        height: 740px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center 60px;
+        width: 100%;
+    }
+
+    #splash {
+        background-image: url('../slider/fossiler.jpg');
+        padding-top: 60px;
+        height: 740px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center 60px;
+        width: 100%;
+    }
 }
 
 @media (max-width: 600px) {
@@ -572,17 +583,18 @@ footer.page-footer .footer-copyright {
         padding-top: 30px;
 
     }
-    article.kalk{
-            display: grid;
-    grid-template-columns: 1fr;
-        }
+
+    article.kalk {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
 
     .grid-item {
         width: 100%;
         height: auto;
-        clear: both;
         grid-template-rows: 1fr;
-}
+    }
+
     .grid-item:nth-child(1) {
         grid-column: 1 / 7;
         grid-row: 1 / 2;
@@ -612,6 +624,7 @@ footer.page-footer .footer-copyright {
         grid-column: 1 / 7;
         grid-row: span 1;
     }
+
     .grid-item:nth-child(7) {
         grid-column: 1 / 7;
         grid-row: span 1;
@@ -622,38 +635,48 @@ footer.page-footer .footer-copyright {
         grid-row: span 1;
     }
 
-@media screen and (min-width: 451px) {
+    @media screen and (min-width: 421px) {
 
-    img.myLogo {
-        display: block;
+        p.mobileTekst {
+            display: none;
+
+        }
+
+        img.myLogo {
+            display: block;
+        }
+
+        img.mobileLogo {
+            display: none;
+        }
     }
 
-    img.mobileLogo {
-        display: none !important;
-    }
-    p.mobileTekst {
-        display: none !important;
+    @media screen and (max-width: 420px) {
 
-    }
-}
+        img.myLogo {
+            display: none;
+        }
 
-@media screen and (max-width: 450px) {
+        img.mobileLogo {
+            display: inline-block;
+        }
 
-    img.myLogo {
-        display: none !important;
+        p.mobileTekst {
+            display: inline-block;
+        }
+
+        .fa-2x {
+            font-size: 1.5em;
+        }
+
+        .mr-md-5,
+        .mx-md-5 {
+            margin-right: 2rem !important;
+        }
     }
 
-    img.mobileLogo {
-        display: block !important;
+    @media screen and (max-width: 310px) {
+        p.mobileTekst {
+            display: none;
+        }
     }
-
-    p.mobileTekst {
-        display: block !important;
-    }
-    .fa-2x {
-    font-size: 1.5em;
-    }
-.mr-md-5, .mx-md-5 {
-    margin-right: 2rem !important;
-}
-}
