--- a/css/demo.css
+++ b/css/demo.css
@@ -1,14 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    font-size: 22px;
+    font-size: 16px;
 }
-
-body,
-html {
-    height: 100%;
-}
-
 *,
 *:after,
 *::before {
@@ -25,11 +19,26 @@ html {
     font-style: normal;
 
 }
-
 * {
     font-family: 'limestoneregular';
 }
+h1{
+  text-align: center;
+}
+h3.grid-item{
+    padding-left: 1em
 
+}
+/* kalklandet style*/
+img.kalklandImg1 {
+    padding-top: 2em;
+}
+.links{
+  color: #796d65;
+}
+h2.grid-item{
+    display: none;
+}
 /* styles for opening menu */
 
 .menu-wrapper.open-all,
@@ -44,8 +53,16 @@ html {
 }
 
 .menu-wrapper.open-all .submenu li {
-    height: 60px
+    max-height: 40px
 }
+/* styles for geomuseet */
+/*.opening .kontakt{
+        display: block;
+    }
+    .opening_2 .kontakt_2{
+        display: none;
+    }
+
 
 /* if an icon anchor has a span, hide the span */
 
@@ -58,7 +75,7 @@ html {
 
 .icon-menu::before {
     margin-left: -15px;
-    vertical-align: -2px;
+   /* vertical-align: -2px;*/
     width: 30px;
     height: 3px;
     background: #796d65;
@@ -105,7 +122,6 @@ img.mobileLogo p {
     width: 100%;
     height: auto;
 }
-
 .banner_inner {
     position: absolute;
     left: 75%;
@@ -172,7 +188,7 @@ div#splash.demo-banner {
 }
 
 .container > header h1 {
-    font-size: 3.2em;
+    font-size: 2.8em;
     line-height: 1.3;
     margin: 0;
     font-weight: 300;
@@ -182,7 +198,7 @@ div#splash.demo-banner {
     display: block;
     font-size: 55%;
     color: #74818e;
-    padding: 0 0 0.6em 0.1em;
+   /* padding: 0 0 0.6em 0.1em;*/
 }
 
 /* header animation h1*/
@@ -208,64 +224,9 @@ h1.animate {
     }
 }
 
-/* content json */
-.area-wrapper {
-    display: grid;
-    grid-template-columns: auto auto auto auto auto auto;
-    justify-content: center;
-}
-
-.indhold {}
-
-.kalk {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-}
-
-.indhold img {
-    max-width: 100%;
-    height: 300px;
-}
-
-.indhold figure {
-    margin: 0;
-}
-
-.overskrift {
-    text-align: center;
-    display: none;
-}
-
-.kalk h2 {
-    padding-left: 1em;
-}
-
-.kalk p {
-    padding-left: 1em;
-}
-
-.kalk img {
-    width: 300px;
-    top: 1em;
-    margin-top: 1em;
-}
-
-
-main {
-    max-width: 100%;
-    margin-top: 0px;
-}
-
-@media (min-width: 800px) {
-    .retter {
-        grid-template-columns: repeat(3, 1fr);
-        grid-gap: 2px;
-    }
-}
-
 /* Nav content json */
-.navi {
-    margin-top: -30px;
+.navi{
+  margin-top: -30px;
 }
 
 .navi ul {
@@ -300,14 +261,63 @@ main {
     cursor: default;
 }
 
+/* content json */
+.area-wrapper {
+    display: grid;
+}
+.indhold {
+  background-color: white;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.kalk {
+    display: grid;
+}
+
+.indhold img {
+    text-align: center;
+    max-width: 100%;
+  height: 400px;
+}
+
+.indhold figure {
+    margin: 0;
+}
+.overskrift {
+    text-align: center;
+    display: none;
+}
+        .kalk h2 {
+            padding-left: 1em;
+        }
+        .kalk p{
+            padding-left: 1em;
+        }
+       .kalk img {
+            width: 300px;
+            top: 1em;
+            margin-top: 1em;
+        }
+
+
+        main {
+            max-width: 100%;
+            margin-top: 0px;
+        }
+        @media (min-width: 800px) {
+            .retter {
+                grid-template-columns: repeat(3, 1fr);
+                grid-gap: 2px;
+            }
+        }
 
 @media screen and (min-width: 600px) {
     .navi li {
-        width: 120px;
+        width: 95px;
         border-bottom: none;
         height: 40px;
         line-height: 40px;
-        font-size: 0.7em;
     }
 
     .navi li {
@@ -317,156 +327,148 @@ main {
 }
 
 /* grid */
-/* grid indhold */
-.grid-container {
-    display: inline-grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-}
 
 article.kalk {
     display: inline-grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
 }
 
 .grid-item:nth-child(1) {
     grid-column: 1 / 7;
     grid-row: 1 / 2;
+  text-align: center;
+font-size: 26px;
 }
 
 .grid-item:nth-child(2) {
-    grid-column: 1/ 4;
+    grid-column: 1/ 3;
     grid-row: 2 / 3;
 }
 
 .grid-item:nth-child(3) {
-    grid-column: 1/ 4;
-    grid-row: 3 / 4;
+    grid-column: 1/ 3;
+    grid-row: 3 / 5;
 }
 
 .grid-item:nth-child(4) {
-    grid-column: 4/ 6;
-    grid-row: 2 / 4;
+    grid-column: 3/ 6;
+    grid-row: 2 / 5;
 }
 
 .grid-item:nth-child(5) {
-    grid-column: 1 /3;
-    grid-row: 4/ 6;
-}
-
-.grid-item:nth-child(6) {
-    grid-column: 3 /6;
-    grid-row: 4 / 5;
-}
-
-.grid-item:nth-child(7) {
-    grid-column: 3 /6;
-    grid-row: 5 / 6;
-}
-
-.grid-item:nth-child(8) {
-    grid-column: 6 / 7;
-    grid-row: 2 / 6;
+    grid-column: 6 /7;
+    grid-row: 2/ 5;
+    border-left: 4px solid #EC7F44;
+    width: 180px;
 }
 
 /* grid højde */
 .grid-item {
-    padding: 30px;
     font-size: 16px;
     text-align: left;
+    padding: 8px;
 }
-
-/* footer */
-footer {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    color: white;
+div.grid-item {
+    padding-left: 1em;
+}
+img.grid-item {
     text-align: center;
-    font-size: .75rem;
+    margin: 0 auto;
 }
+/* footer */
 
-footer.page-footer {
-    bottom: 0;
-    color: #fff;
-}
+ #footer {
+        font-size: 14px;
+        width: 100%;
+        margin: auto;
 
-.conta {
+    background-color: #ec7f44;
+    color: #FFF;
+    }
+    #wrapper {
+    background-color: #ec7f44;
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+    overflow:hidden;
 }
 
-.page-footer {
-    background-color: #ec7f44 !important;
-}
-
-.row {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
-}
-
-.pb-5,
-.py-5 {
-    padding-bottom: 3rem !important;
-    padding-top: 3rem !important;
-}
-
-.col-md-12 {
-    -ms-flex: 0 0 100%;
-    flex: 0 0 100%;
-    max-width: 100%;
-}
-
-.fa-lg {
-    font-size: 1.33333em;
-    line-height: .75em;
-    vertical-align: -.0667em;
-}
-
-.mr-md-5,
-.mx-md-5 {
-    margin-right: 3rem !important;
-}
-
-.flex-center {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
+    .footerFloat li{
+        list-style: none;
+    text-decoration-line: underline;
+    text-align: left;
+    }
+    .footerFloat h4{
+        text-align: center;
+      color: #796d65;
+font-size: 24px;
+    }
+    .footerFloat ul{
+        text-align: center;
+    }
+    .footer-copyright{
+        overflow: hidden;
+background-color: #b4a983;
+text-align: center;
+color: #FFF;
+font-size: 12px;
+    }
+    .flex-center {
     display: flex;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
     justify-content: center;
     -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
     align-items: center;
     height: 100%;
+    padding-bottom: 10px;
+      padding-top: 2em;
+}
+.fb-ic, .ins-ic, .pin-ic{
+    font-size: 10px;
+  padding-right: 2em;
+}
+div.footerFloat {
+    width: 25%;
+    float: left;
+    }
+iframe#kort{
+    max-width: 220px;
+    height: auto;
+    text-align: center;
 }
 
-/* copyright */
-footer.page-footer .footer-copyright {
-    overflow: hidden;
-    background-color: rgba(0, 0, 0, .2);
-    color: rgba(255, 255, 255, .6);
+@media all and (max-width: 650px) {
+    .breakFooter {
+
+        width: 100%;
+        float: none;
+        margin: 0 auto;
+    }
+    div.footerFloat {
+    width: 50%;
+}
+}
+@media all and (max-width: 500px) {
+    .breakFooter {
+
+        width: 100%;
+        float: none;
+        margin: 0 auto;
+    }
+    .footerFloat ul{
+        text-align: left;
+    }
+    div.footerFloat {
+    width: 100%;
+    text-align: center;
 }
 
-.text-center {
-    text-align: center !important;
+iframe#kort{
+    width: 100%;
 }
-
-.pb-3,
-.py-3 {
-    padding-bottom: 1rem !important;
-    padding-top: 1rem !important;
+div#kort{
+    width: 100%;
 }
-
+}
 /* media query */
 @media screen and (max-width: 1025px) {
     .container > header {
@@ -488,6 +490,118 @@ footer.page-footer .footer-copyright {
 }
 
 @media screen and (max-width: 809px) {
+       /* .grid-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding-top: 30px;
+
+    }*/
+
+    article.kalk{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding-top: 30px;
+
+    }
+
+    .grid-item {
+        width: 50%;
+        height: auto;
+        grid-template-rows: 1fr 1fr;
+}
+    .grid-item:nth-child(1) {
+        grid-column: 1 / 7;
+        grid-row: 1 / 2;
+    }
+
+    .grid-item:nth-child(2) {
+        grid-column: 1 / 3;
+        grid-row: span 1;
+        width: 100%;
+margin: 0 auto;
+    }
+
+    .grid-item:nth-child(3) {
+        grid-column: 1 / 3;
+        grid-row: span 1;
+                width: 100%;
+
+margin: 0 auto;
+    }
+
+    .grid-item:nth-child(4) {
+        grid-column: 3 / 7;
+        grid-row: span 2;
+    }
+
+    .grid-item:nth-child(5) {
+        grid-column: 1 / 7;
+        grid-row: span 1;
+        width: 100%;
+text-align: center;
+    }
+    p.grid-item:nth-child(5) {
+        text-align: left;
+    }
+   /* .pagesGrid-item:nth-child(6) {
+
+    display: none;
+}
+ /* pagesGrid */
+ /*.pagesGrid-item-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}*/
+    section.indhold {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-bottom: 0px;
+}
+div.pagesGrid-item-container {
+        height: auto;
+        width: 50%;
+}
+div.pagesGrid-item:nth-child(1) {
+    grid-column: 1 / 3;
+    grid-row: span 1;
+    width: 100%;
+}
+
+div.pagesGrid-item:nth-child(2) {
+    grid-column: 1 / 3;
+    grid-row: span 1;
+    width: 100%;
+}
+
+div.pagesGrid-item:nth-child(3) {
+    grid-column: 1 /3;
+    grid-row: span 1;
+    width: 100%;
+}
+div.pagesGrid-item:nth-child(4) {
+    grid-column: 1 / 2;
+    grid-row: span 1;
+   max-width: 350px;
+}
+div.pagesGrid-item:nth-child(5) {
+    grid-column: 2 / 3;
+    grid-row: span 1;
+    width: auto;
+}
+div.pagesGrid-item:nth-child(6) {
+    grid-column: 1 / 3;
+     grid-row: span 1;
+     width: 100%;
+     border-left: none;
+     text-align: center;
+}
+/*.pagesGrid-item{
+    width: 100%;
+}*/
+/*img.pagesGrid-item {
+    text-align: center;
+    margin: 0 auto;
+}
     main {
         margin-top: 60px;
     }
@@ -495,10 +609,6 @@ footer.page-footer .footer-copyright {
     #banner-splash {
         display: none;
     }
-
-    /*a.mobile {
-        display: block;
-    }*/
 
     a#mobileSplash {
         display: block;
@@ -575,7 +685,6 @@ footer.page-footer .footer-copyright {
         transform: translate(-50%, -50%);
     }
 }
-
 @media all and (max-width: 575px) {
     .grid-container {
         display: grid;
@@ -583,18 +692,17 @@ footer.page-footer .footer-copyright {
         padding-top: 30px;
 
     }
-
-    article.kalk {
-        display: grid;
-        grid-template-columns: 1fr;
-    }
+    article.kalk{
+            display: grid;
+    grid-template-columns: 1fr;
+    padding-top: 0px;
+        }
 
     .grid-item {
         width: 100%;
         height: auto;
         grid-template-rows: 1fr;
-    }
-
+}
     .grid-item:nth-child(1) {
         grid-column: 1 / 7;
         grid-row: 1 / 2;
@@ -619,64 +727,96 @@ footer.page-footer .footer-copyright {
         grid-column: 1 / 7;
         grid-row: span 1;
     }
+    /* pagesGrid */
+    section.indhold {
+    background-color: white;
+    display: grid;
+    grid-template-columns: 1fr;
+    padding-bottom: 0px;
+}
+/*div.pagesGrid-item-container {
+    width: 100%;
+        height: auto;
+        grid-template-rows: span 1;
+}*/
+div.pagesGrid-item:nth-child(1) {
+    grid-column: 1 / 7;
+    grid-row: span 1;
+}
 
-    .grid-item:nth-child(6) {
-        grid-column: 1 / 7;
-        grid-row: span 1;
+div.pagesGrid-item:nth-child(2) {
+    grid-column: 1 / 7;
+    grid-row: span 1;
+}
+
+div.pagesGrid-item:nth-child(3) {
+    grid-column: 1 /7;
+    grid-row: span 1;
+}
+div.pagesGrid-item:nth-child(4) {
+    grid-column: 1 / 7;
+    grid-row: span 1;
+    margin: 0 auto;
+}
+div.pagesGrid-item:nth-child(5) {
+    grid-column: 1 / 7;
+    grid-row: span 1;
+}
+div.pagesGrid-item:nth-child(6) {
+    grid-column: 1 / 7;
+     grid-row: span 1;
+}
+.pagesGrid-item{
+    width: 100%;
+}
+img.pagesGrid-item {
+    text-align: center;
+    margin: 0 auto;
+}
+}
+
+@media screen and (min-width: 421px) {
+
+    p.mobileTekst {
+        display: none;
+
     }
 
-    .grid-item:nth-child(7) {
-        grid-column: 1 / 7;
-        grid-row: span 1;
+    img.myLogo {
+        display: block;
     }
 
-    .grid-item:nth-child(8) {
-        grid-column: 1 / 7;
-        grid-row: span 1;
+    img.mobileLogo {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 420px) {
+
+    img.myLogo {
+        display: none;
     }
 
-    @media screen and (min-width: 421px) {
-
-        p.mobileTekst {
-            display: none;
-
-        }
-
-        img.myLogo {
-            display: block;
-        }
-
-        img.mobileLogo {
-            display: none;
-        }
+    img.mobileLogo {
+        display: inline-block;
     }
 
-    @media screen and (max-width: 420px) {
-
-        img.myLogo {
-            display: none;
-        }
-
-        img.mobileLogo {
-            display: inline-block;
-        }
-
-        p.mobileTekst {
-            display: inline-block;
-        }
-
-        .fa-2x {
-            font-size: 1.5em;
-        }
-
-        .mr-md-5,
-        .mx-md-5 {
-            margin-right: 2rem !important;
-        }
+    p.mobileTekst {
+        display: inline-block;
     }
 
-    @media screen and (max-width: 310px) {
-        p.mobileTekst {
-            display: none;
-        }
+    .fa-2x {
+        font-size: 1.5em;
     }
+
+    .mr-md-5,
+    .mx-md-5 {
+        margin-right: 2rem !important;
+    }
+}
+
+@media screen and (max-width: 310px) {
+    p.mobileTekst {
+        display: none;
+    }
+}
