--- a/css/demo.css
+++ b/css/demo.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     font-size: 16px;
 }
+
 *,
 *:after,
 *::before {
@@ -19,80 +20,33 @@ body {
     font-style: normal;
 
 }
+
 * {
     font-family: 'limestoneregular';
 }
-h1{
-  text-align: center;
-}
-h3.grid-item{
-    padding-left: 1em
 
+h1 {
+    text-align: center;
 }
+
+h3.grid-item {
+    padding-left: 1em
+}
+
 /* kalklandet style*/
 img.kalklandImg1 {
     padding-top: 2em;
 }
-.links{
-  color: #796d65;
+
+.links {
+    color: #796d65;
 }
-h2.grid-item{
+
+h2.grid-item {
     display: none;
 }
-/* styles for opening menu */
 
-.menu-wrapper.open-all,
-.menu-wrapper.open {
-    -webkit-transform: translateX(0px);
-    -moz-transform: translateX(0px);
-    transform: translateX(0px);
-}
-
-.menu-wrapper.open-all {
-    width: 300px;
-}
-
-.menu-wrapper.open-all .submenu li {
-    max-height: 40px
-}
 /* styles for geomuseet */
-/*.opening .kontakt{
-        display: block;
-    }
-    .opening_2 .kontakt_2{
-        display: none;
-    }
-
-
-/* if an icon anchor has a span, hide the span */
-
-.icon span {
-    width: 0;
-    height: 0;
-    display: block;
-    overflow: hidden;
-}
-
-.icon-menu::before {
-    margin-left: -15px;
-   /* vertical-align: -2px;*/
-    width: 30px;
-    height: 3px;
-    background: #796d65;
-    box-shadow: 0 3px #ec7f44, 0 -6px #796d65, 0 -9px #ec7f44, 0 -12px #796d65;
-    content: '';
-}
-
-.no-touch .icon-menu:hover::before,
-.no-touch .icon-menu.valgt:hover::before {
-    background: #796d65;
-    box-shadow: 0 3px #ec7f44, 0 -6px #796d65, 0 -9px #ec7f44, 0 -12px #796d65;
-}
-
-.icon-menu.valgt::before {
-    background: #796d65;
-    box-shadow: 0 3px #ec7f44, 0 -6px #796d65, 0 -9px #ec7f44, 0 -12px #796d65;
-}
 
 /* To Navigation Style */
 img.myLogo {
@@ -122,6 +76,7 @@ img.mobileLogo p {
     width: 100%;
     height: auto;
 }
+
 .banner_inner {
     position: absolute;
     left: 75%;
@@ -198,14 +153,14 @@ div#splash.demo-banner {
     display: block;
     font-size: 55%;
     color: #74818e;
-   /* padding: 0 0 0.6em 0.1em;*/
+    /* padding: 0 0 0.6em 0.1em;*/
 }
 
 /* header animation h1*/
 h1.animate {
     position: relative;
     animation: animate 0.8s;
-    padding-top: 5px;
+    padding-top: 25px;
     color: #f37021;
     text-align: center;
     font-size: 2em;
@@ -225,8 +180,8 @@ h1.animate {
 }
 
 /* Nav content json */
-.navi{
-  margin-top: -30px;
+.navi {
+    margin-top: -30px;
 }
 
 .navi ul {
@@ -261,158 +216,50 @@ h1.animate {
     cursor: default;
 }
 
-/* content json */
-.area-wrapper {
-    display: grid;
-}
-.indhold {
-  background-color: white;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-}
-
-.kalk {
-    display: grid;
-}
-
-.indhold img {
-    text-align: center;
-    max-width: 100%;
-  height: 400px;
-}
-
-.indhold figure {
-    margin: 0;
-}
-.overskrift {
-    text-align: center;
-    display: none;
-}
-        .kalk h2 {
-            padding-left: 1em;
-        }
-        .kalk p{
-            padding-left: 1em;
-        }
-       .kalk img {
-            width: 300px;
-            top: 1em;
-            margin-top: 1em;
-        }
 
 
-        main {
-            max-width: 100%;
-            margin-top: 0px;
-        }
-        @media (min-width: 800px) {
-            .retter {
-                grid-template-columns: repeat(3, 1fr);
-                grid-gap: 2px;
-            }
-        }
-
-@media screen and (min-width: 600px) {
-    .navi li {
-        width: 95px;
-        border-bottom: none;
-        height: 40px;
-        line-height: 40px;
-    }
-
-    .navi li {
-        display: inline-block;
-        margin-right: -4px;
-    }
-}
-
-/* grid */
-
-article.kalk {
-    display: inline-grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto;
-}
-
-.grid-item:nth-child(1) {
-    grid-column: 1 / 7;
-    grid-row: 1 / 2;
-  text-align: center;
-font-size: 26px;
-}
-
-.grid-item:nth-child(2) {
-    grid-column: 1/ 3;
-    grid-row: 2 / 3;
-}
-
-.grid-item:nth-child(3) {
-    grid-column: 1/ 3;
-    grid-row: 3 / 5;
-}
-
-.grid-item:nth-child(4) {
-    grid-column: 3/ 6;
-    grid-row: 2 / 5;
-}
-
-.grid-item:nth-child(5) {
-    grid-column: 6 /7;
-    grid-row: 2/ 5;
-    border-left: 4px solid #EC7F44;
-    width: 180px;
-}
-
-/* grid højde */
-.grid-item {
-    font-size: 16px;
-    text-align: left;
-    padding: 8px;
-}
-div.grid-item {
-    padding-left: 1em;
-}
-img.grid-item {
-    text-align: center;
-    margin: 0 auto;
-}
 /* footer */
 
- #footer {
-        font-size: 14px;
-        width: 100%;
-        margin: auto;
+#footer {
+    font-size: 14px;
+    width: 100%;
+    margin: auto;
 
     background-color: #ec7f44;
     color: #FFF;
-    }
-    #wrapper {
-    background-color: #ec7f44;
-    width: 100%;
-    overflow:hidden;
 }
 
-    .footerFloat li{
-        list-style: none;
+#wrapper {
+    background-color: #ec7f44;
+    width: 100%;
+    overflow: hidden;
+}
+
+.footerFloat li {
+    list-style: none;
     text-decoration-line: underline;
     text-align: left;
-    }
-    .footerFloat h4{
-        text-align: center;
-      color: #796d65;
-font-size: 24px;
-    }
-    .footerFloat ul{
-        text-align: center;
-    }
-    .footer-copyright{
-        overflow: hidden;
-background-color: #b4a983;
-text-align: center;
-color: #FFF;
-font-size: 12px;
-    }
-    .flex-center {
+}
+
+.footerFloat h4 {
+    text-align: center;
+    color: #796d65;
+    font-size: 24px;
+}
+
+.footerFloat ul {
+    text-align: center;
+}
+
+.footer-copyright {
+    overflow: hidden;
+    background-color: #b4a983;
+    text-align: center;
+    color: #FFF;
+    font-size: 12px;
+}
+
+.flex-center {
     display: flex;
     -webkit-box-pack: center;
     justify-content: center;
@@ -420,17 +267,22 @@ font-size: 12px;
     align-items: center;
     height: 100%;
     padding-bottom: 10px;
-      padding-top: 2em;
+    padding-top: 2em;
 }
-.fb-ic, .ins-ic, .pin-ic{
+
+.fb-ic,
+.ins-ic,
+.pin-ic {
     font-size: 10px;
-  padding-right: 2em;
+    padding-right: 2em;
 }
+
 div.footerFloat {
     width: 25%;
     float: left;
-    }
-iframe#kort{
+}
+
+iframe#kort {
     max-width: 220px;
     height: auto;
     text-align: center;
@@ -443,10 +295,12 @@ iframe#kort{
         float: none;
         margin: 0 auto;
     }
+
     div.footerFloat {
-    width: 50%;
+        width: 50%;
+    }
 }
-}
+
 @media all and (max-width: 500px) {
     .breakFooter {
 
@@ -454,21 +308,25 @@ iframe#kort{
         float: none;
         margin: 0 auto;
     }
-    .footerFloat ul{
+
+    .footerFloat ul {
         text-align: left;
     }
+
     div.footerFloat {
-    width: 100%;
-    text-align: center;
+        width: 100%;
+        text-align: center;
+    }
+
+    iframe#kort {
+        width: 100%;
+    }
+
+    div#kort {
+        width: 100%;
+    }
 }
 
-iframe#kort{
-    width: 100%;
-}
-div#kort{
-    width: 100%;
-}
-}
 /* media query */
 @media screen and (max-width: 1025px) {
     .container > header {
@@ -490,118 +348,7 @@ div#kort{
 }
 
 @media screen and (max-width: 809px) {
-       /* .grid-container {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        padding-top: 30px;
 
-    }*/
-
-    article.kalk{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        padding-top: 30px;
-
-    }
-
-    .grid-item {
-        width: 50%;
-        height: auto;
-        grid-template-rows: 1fr 1fr;
-}
-    .grid-item:nth-child(1) {
-        grid-column: 1 / 7;
-        grid-row: 1 / 2;
-    }
-
-    .grid-item:nth-child(2) {
-        grid-column: 1 / 3;
-        grid-row: span 1;
-        width: 100%;
-margin: 0 auto;
-    }
-
-    .grid-item:nth-child(3) {
-        grid-column: 1 / 3;
-        grid-row: span 1;
-                width: 100%;
-
-margin: 0 auto;
-    }
-
-    .grid-item:nth-child(4) {
-        grid-column: 3 / 7;
-        grid-row: span 2;
-    }
-
-    .grid-item:nth-child(5) {
-        grid-column: 1 / 7;
-        grid-row: span 1;
-        width: 100%;
-text-align: center;
-    }
-    p.grid-item:nth-child(5) {
-        text-align: left;
-    }
-   /* .pagesGrid-item:nth-child(6) {
-
-    display: none;
-}
- /* pagesGrid */
- /*.pagesGrid-item-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}*/
-    section.indhold {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding-bottom: 0px;
-}
-div.pagesGrid-item-container {
-        height: auto;
-        width: 50%;
-}
-div.pagesGrid-item:nth-child(1) {
-    grid-column: 1 / 3;
-    grid-row: span 1;
-    width: 100%;
-}
-
-div.pagesGrid-item:nth-child(2) {
-    grid-column: 1 / 3;
-    grid-row: span 1;
-    width: 100%;
-}
-
-div.pagesGrid-item:nth-child(3) {
-    grid-column: 1 /3;
-    grid-row: span 1;
-    width: 100%;
-}
-div.pagesGrid-item:nth-child(4) {
-    grid-column: 1 / 2;
-    grid-row: span 1;
-   max-width: 350px;
-}
-div.pagesGrid-item:nth-child(5) {
-    grid-column: 2 / 3;
-    grid-row: span 1;
-    width: auto;
-}
-div.pagesGrid-item:nth-child(6) {
-    grid-column: 1 / 3;
-     grid-row: span 1;
-     width: 100%;
-     border-left: none;
-     text-align: center;
-}
-/*.pagesGrid-item{
-    width: 100%;
-}*/
-/*img.pagesGrid-item {
-    text-align: center;
-    margin: 0 auto;
-}
     main {
         margin-top: 60px;
     }
@@ -659,6 +406,20 @@ div.pagesGrid-item:nth-child(6) {
     }
 }
 
+@media screen and (min-width: 600px) {
+    .navi li {
+        width: 95px;
+        border-bottom: none;
+        height: 40px;
+        line-height: 40px;
+    }
+
+    .navi li {
+        display: inline-block;
+        margin-right: -4px;
+    }
+}
+
 @media (max-width: 600px) {
 
 
@@ -684,96 +445,6 @@ div.pagesGrid-item:nth-child(6) {
         -o-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
     }
-}
-@media all and (max-width: 575px) {
-    .grid-container {
-        display: grid;
-        grid-template-columns: 1fr;
-        padding-top: 30px;
-
-    }
-    article.kalk{
-            display: grid;
-    grid-template-columns: 1fr;
-    padding-top: 0px;
-        }
-
-    .grid-item {
-        width: 100%;
-        height: auto;
-        grid-template-rows: 1fr;
-}
-    .grid-item:nth-child(1) {
-        grid-column: 1 / 7;
-        grid-row: 1 / 2;
-    }
-
-    .grid-item:nth-child(2) {
-        grid-column: 1 / 7;
-        grid-row: span 1;
-    }
-
-    .grid-item:nth-child(3) {
-        grid-column: 1 / 7;
-        grid-row: span 1;
-    }
-
-    .grid-item:nth-child(4) {
-        grid-column: 1 / 7;
-        grid-row: span 1;
-    }
-
-    .grid-item:nth-child(5) {
-        grid-column: 1 / 7;
-        grid-row: span 1;
-    }
-    /* pagesGrid */
-    section.indhold {
-    background-color: white;
-    display: grid;
-    grid-template-columns: 1fr;
-    padding-bottom: 0px;
-    display: flex;
-}
-/*div.pagesGrid-item-container {
-    width: 100%;
-        height: auto;
-        grid-template-rows: span 1;
-}*/
-div.pagesGrid-item:nth-child(1) {
-    grid-column: 1 / 7;
-    grid-row: span 1;
-}
-
-div.pagesGrid-item:nth-child(2) {
-    grid-column: 1 / 7;
-    grid-row: span 1;
-}
-
-div.pagesGrid-item:nth-child(3) {
-    grid-column: 1 /7;
-    grid-row: span 1;
-}
-div.pagesGrid-item:nth-child(4) {
-    grid-column: 1 / 7;
-    grid-row: span 1;
-    margin: 0 auto;
-}
-div.pagesGrid-item:nth-child(5) {
-    grid-column: 1 / 7;
-    grid-row: span 1;
-}
-div.pagesGrid-item:nth-child(6) {
-    grid-column: 1 / 7;
-     grid-row: span 1;
-}
-.pagesGrid-item{
-    width: 100%;
-}
-img.pagesGrid-item {
-    text-align: center;
-    margin: 0 auto;
-}
 }
 
 @media screen and (min-width: 421px) {
