--- a/css/demo.css
+++ b/css/demo.css
@@ -270,7 +270,7 @@ div#splash.demo-banner {
 #splash {
     background-image: url('../slider/fossiler.jpg');
     padding-top: 30px;
-    height: 631px;
+    height: 721px;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -428,10 +428,9 @@ iframe#kort {
         float: none;
         margin: 0 auto;
     }
-
-    div.footerFloat {
-        width: 50%;
-    }
+  div.footerFloat {
+    width: 100%;
+}
 }
 
 @media all and (max-width: 500px) {
@@ -477,11 +476,14 @@ iframe#kort {
 
     #mobileSplash {
         display: none;
-    }
+  }
 }
 
 @media screen and (max-width: 809px) {
-
+	div.splashHeader img {
+      max-height: 300px;
+    padding: 30px 0 0;
+}
     main {
         margin-top: 60px;
     }
@@ -492,6 +494,9 @@ iframe#kort {
 
     a#mobileSplash {
         display: block;
+    }
+   div.footerFloat {
+        width: 50%;
     }
 
     /* header items */
@@ -579,6 +584,10 @@ iframe#kort {
         -o-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
     }
+  .footerFloat ul {
+    text-align: center;
+    padding-left: 20%;
+}
 }
 
 @media screen and (min-width: 421px) {
